# pager_cli

./: .pylint.ini  LICENSE.md  Makefile  README.md  mkdocs.yml  pyproject.toml  scent.py
.github/workflows/: main.yml
pager_cli/: __init__.py  __main__.py  cli.py
pager_cli/tests/: test_utils.py
tests/: conftest.py  test_cli.py
