[tool.poetry]

name = "pager_cli"
version = "0.2"
description = "pagerduty cli to list/ack/resolve incidents"

license = "MIT"

authors = ["Frankie <f@peering.sh>"]

readme = "README.md"

homepage = "https://pypi.org/project/pager_cli"
documentation = "https://pager_cli.readthedocs.io"
repository = "https://github.com/frankiexyz/pager_cli"

keywords = [
]
classifiers = [
    # TODO: update this list to match your application: https://pypi.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 1 - Planning",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
]

[tool.poetry.dependencies]

python = "^3.7"

# TODO: Remove these and add your library's requirements
click = "^7.0"
minilog = "^2.0"
strictyaml = "^1.4.4"
tabulate = "^0.8.9"
requests-mock = "^1.9.3"
types-setuptools = "^57.0.0"
types-requests = "^2.25.0"
requests = "^2.25.1"
types-tabulate = "^0.1.1"
yaspin = "^2.0.0"

[tool.poetry.dev-dependencies]

# Formatters
black = "=20.8b1"
isort = "=5.5.1"

# Linters
mypy = "*"
pydocstyle = "*"
pylint = "~2.6.0"

# Testing
pytest = "^5.3.2"
pytest-cov = "*"
pytest-describe = { git = "https://github.com/pytest-dev/pytest-describe", rev = "453aa9045b265e313f356f1492d8991c02a6aea6" } # use 2.0 when released
pytest-expecter = "^2.1"
pytest-random = "*"
freezegun = "*"

# Reports
coveragespace = "^4.0"

# Documentation
mkdocs = "~1.0"
pygments = "^2.5.2"

# Tooling
pyinstaller = "*"
sniffer = "*"
MacFSEvents = { version = "*", platform = "darwin" }
pync = { version = "*", platform = "darwin" }
ipython = "^7.12.0"

[tool.poetry.scripts]

pager_cli = "pager_cli.cli:main"

[tool.black]

target-version = ["py36", "py37", "py38"]
skip-string-normalization = true

[build-system]

requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
